Fixed creating installers